// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oembedArticleRoute invalid url 1`] = `
Object {
  "data": "Bad request. Invalid url.",
  "status": 400,
}
`;

exports[`oembedArticleRoute success 1`] = `
Object {
  "data": Object {
    "height": 800,
    "html": "<iframe src=\\"https://ndla-frontend.test.api.ndla.no/article-iframe/nb/urn:resource:1/123\\" frameborder=\\"0\\" allowFullscreen=\\"\\" />",
    "title": "Resource title",
    "type": "rich",
    "version": "1.0",
    "width": 800,
  },
}
`;

exports[`parseAndMatchUrl 1`] = `
Object {
  "isExact": true,
  "params": Object {
    "resourceId": "1:1682",
    "subjectId": "subject:3",
    "topicId": "topic:1:168398",
    "topicPath": "topic:1:55163",
  },
  "path": "/subjects/:subjectId/:topicPath*/:topicId/resource\\\\::resourceId",
  "url": "/subjects/subject:3/topic:1:55163/topic:1:168398/resource:1:1682",
}
`;

exports[`parseAndMatchUrl 2`] = `
Object {
  "isExact": true,
  "params": Object {
    "resourceId": "1:168554",
    "subjectId": "subject:3",
    "topicId": "topic:1:173292",
    "topicPath": "topic:1:168542",
  },
  "path": "/subjects/:subjectId/:topicPath*/:topicId/resource\\\\::resourceId",
  "url": "/subjects/subject:3/topic:1:168542/topic:1:173292/resource:1:168554",
}
`;

exports[`parseAndMatchUrl 3`] = `
Object {
  "isExact": true,
  "params": Object {
    "resourceId": "1:168554",
    "subjectId": "subject:3",
    "topicId": "topic:1:168542",
    "topicPath": undefined,
  },
  "path": "/subjects/:subjectId/:topicPath*/:topicId/resource\\\\::resourceId",
  "url": "/subjects/subject:3/topic:1:168542/resource:1:168554",
}
`;

exports[`parseAndMatchUrl 4`] = `
Object {
  "isExact": true,
  "params": Object {
    "lang": "nb",
    "resourceId": "1:1682",
    "subjectId": "subject:3",
    "topicId": "topic:1:168398",
    "topicPath": "topic:1:55163",
  },
  "path": "/:lang/subjects/:subjectId/:topicPath*/:topicId/resource\\\\::resourceId",
  "url": "/nb/subjects/subject:3/topic:1:55163/topic:1:168398/resource:1:1682",
}
`;

exports[`parseAndMatchUrl 5`] = `
Object {
  "isExact": true,
  "params": Object {
    "lang": "nn",
    "resourceId": "1:1682",
    "subjectId": "subject:3",
    "topicId": "topic:1:168398",
    "topicPath": "topic:1:55163",
  },
  "path": "/:lang/subjects/:subjectId/:topicPath*/:topicId/resource\\\\::resourceId",
  "url": "/nn/subjects/subject:3/topic:1:55163/topic:1:168398/resource:1:1682",
}
`;

exports[`parseAndMatchUrl 6`] = `
Object {
  "isExact": true,
  "params": Object {
    "articleId": "4809",
  },
  "path": "/article/:articleId",
  "url": "/article/4809",
}
`;

exports[`parseAndMatchUrl 7`] = `
Object {
  "isExact": true,
  "params": Object {
    "articleId": "4809",
    "lang": "nn",
  },
  "path": "/:lang/article/:articleId",
  "url": "/nn/article/4809",
}
`;
